// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountNavItem stories snapshot > Default story renders and matches snapshot 1`] = `
<a
  class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
  data-discover="true"
  href="/RefArchGlobal/en-GB/account"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user h-5 w-5"
    data-testid="Account Details-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Account Details
</a>
`;

exports[`AccountNavItem stories snapshot > Disabled story renders and matches snapshot 1`] = `
<button
  class="rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-ui has-[>svg]:px-2.5 w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap opacity-50 cursor-not-allowed pointer-events-none text-muted-foreground"
  data-size="sm"
  data-slot="button"
  data-variant="ghost"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user h-5 w-5"
    data-testid="Addresses-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Addresses
</button>
`;

exports[`AccountNavItem stories snapshot > Logout story renders and matches snapshot 1`] = `
<form
  action="/RefArchGlobal/en-GB/logout"
  class="w-full"
  data-discover="true"
  method="post"
>
  <button
    class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent cursor-pointer"
    type="submit"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out h-5 w-5"
      data-testid="Log Out-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    Log Out
  </button>
</form>
`;
